--- a/package.json
+++ b/package.json
@@ -39,5 +39,14 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "git-branch-is": "^4.0.0",
+    "husky": "^7.0.2"
+  },
+  "husky": {
+    "hooks": {
+      "post-merge": "git-branch-is master && yarn version --patch && git push --follow-tags"
+    }
   }
 }
