--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "postcss": "^7",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat",
     "git-branch-is": "^4.0.0",
-    "husky": "^7.0.2"
+    "husky": "4"
   },
   "scripts": {
     "start": "craco start",
