--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mobx-example",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "private": true,
   "dependencies": {
     "@craco/craco": "^6.2.0",
@@ -25,7 +25,6 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "autoprefixer": "^9",
-    "git-branch-is": "^4.0.0",
     "husky": "4",
     "postcss": "^7",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat"
@@ -56,7 +55,7 @@
   },
   "husky": {
     "hooks": {
-      "post-merge": "git-branch-is master && yarn version --patch"
+      "pre-commit": "yarn version --no-git-tag-version --patch && git add package.json"
     }
   }
 }
